Sun Oct 26 19:29:16 CST 2003 Adam Heath <doogie@debian.org>

  * scripts/dpkg-checkbuilddeps.pl: s/dpkg-checkbuild/dpkg-checkbuilddeps/
    in usage.
  * version-nr: Bump to 1.10.17.
  * debian/changelog: Make the date UNRELEASED.

Sun Oct 26 14:55:53 CET 2003 Wichert Akkerman <wichert@wiggy.net>

  * dselect/pkgdepcon.cc: change return value for pkgdepcon() to indicate
    a conflict resolution is needed when dealing with autoselected
    recommends

Sat Oct 25 15:46:16 CDT 2003 Adam Heath <doogie@debian.org>

  * debian/changelog: Tag for 1.10.16 release date(for real this time).

Sat Oct 25 15:45:48 CDT 2003 Adam Heath <doogie@debian.org>

  * scripts/install-info.pl: Change formatting of info.dir.

Sat Oct 25 15:04:41 CDT 2003 Adam Heath <doogie@debian.org>

  * lib/mlib.c, include/dpkg.h.in, utils/md5sum.c: Change limit and the
    return value for buffer_copy to off_t, which fixes large file handling.

Sat Oct 25 15:02:27 CDT 2003 Adam Heath <doogie@debian.org>

  * almost all .c files: Almost *EVERY* damn file was including config.h in
    the wrong spot.  After making it the first include, then
    off_t/size_t/etc could actually be redefined to be 64-bit compatible.

Sat Oct 25 12:47:22 CDT 2003 Adam Heath <doogie@debian.org>

  * scripts/dpkg-checkbuilddeps.pl: Fix dpkg-checkbuilddeps calling of
    parsedep.  It wasn't setting use_arch.

Tue Sep 23 12:20:35 CDT 2003 Adam Heath <doogie@debian.org>

  * configure.in: Add man/es/Makefile.
  
Tue Sep 23 12:12:38 CDT 2003 Adam Heath <doogie@debian.org>

  * debian/changelog: Set release date for 1.10.16.

Sat Sep 20 21:17:45 CDT 2003 Adam Heath <doogie@debian.org>

  * utils/md5sum.c: Fix handling of large files.

Sat Sep 20 20:42:35 CDT 2003 Adam Heath <doogie@debian.org>

  * man/*
    * Imported several translated manpages, from debian-doc cvs:
     * Spanish: 822-date.1 cleanup-info.8 deb-control.5 deb-old.5
       deb.5 dpkg-checkbuilddeps.1 dpkg-deb.1 dpkg-divert.8 dpkg-name.1