@@ -5,6 +5,7 @@ dpkg (1.10.17) unstable; urgency=medium
     and patch. Closes: Bug#151663
   * Branden Robinson <branden@debian.org>:
     s/dpkg-checkbuild/dpkg-checkbuilddeps/ in usage.
+  * dpkg-checkbuilddeps now sets $reduce_arch.  Closes: #212796.
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
