@@ -1,3 +1,7 @@
+Mon Oct 27 09:42:57 CST 2003 Adam Heath <doogie@debian.org>
+
+  * scripts/dpkg-checkbuilddeps.pl: Set $reduce_arch when calling parsedep.
+
 Sun Oct 26 19:29:16 CST 2003 Adam Heath <doogie@debian.org>
 
   * scripts/dpkg-checkbuilddeps.pl: s/dpkg-checkbuild/dpkg-checkbuilddeps/
